<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult"
        app:layout_constraintVertical_bias="0.773">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="197dp">

            <com.google.android.material.button.MaterialButton

                android:id="@+id/btnClear"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#AA4A44"
                android:onClick="resetBTN"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:cornerRadius="36dp" />


            <com.google.android.material.button.MaterialButton

                android:id="@+id/btnParenthesis"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#F28C28"
                android:onClick="parBTN"
                android:text="@string/parenthesis"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnExponent"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#F28C28"
                android:onClick="expBTN"
                android:text="@string/exponent"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMultiply"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#F28C28"
                android:onClick="mulBTN"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:cornerRadius="36dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="197dp">

            <com.google.android.material.button.MaterialButton

                android:id="@+id/btnSeven"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="sevenBTN"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:cornerRadius="36dp" />


            <com.google.android.material.button.MaterialButton

                android:id="@+id/btnEight"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="eightBTN"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNine"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="nineBTN"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDivide"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#F28C28"
                android:onClick="divBTN"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:cornerRadius="36dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="197dp">

            <com.google.android.material.button.MaterialButton

                android:id="@+id/btnFour"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="fourBTN"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:cornerRadius="36dp" />


            <com.google.android.material.button.MaterialButton

                android:id="@+id/btnFive"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="fiveBTN"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSix"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="sixBTN"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSubtract"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#F28C28"
                android:onClick="subBTN"
                android:text="@string/subtract"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:cornerRadius="36dp" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="197dp">

            <com.google.android.material.button.MaterialButton

                android:id="@+id/btnOne"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="oneBTN"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:cornerRadius="36dp" />


            <com.google.android.material.button.MaterialButton

                android:id="@+id/btnTwo"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="twoBTN"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnThree"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="threeBTN"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAdd"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#F28C28"
                android:onClick="addBTN"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:cornerRadius="36dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="197dp">

            <com.google.android.material.button.MaterialButton

                android:id="@+id/btnDoubleZero"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="doublezeroBTN"
                android:text="@string/zeroes"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:cornerRadius="36dp" />


            <com.google.android.material.button.MaterialButton

                android:id="@+id/btnZero"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="zeroBTN"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDecimal"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="decBTN"
                android:text="@string/point"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEquals"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#008000"
                android:onClick="equalBTN"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:cornerRadius="36dp" />
        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/tvSolution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="28dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="28dp"
        android:layout_marginTop="72dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSolution" />

</androidx.constraintlayout.widget.ConstraintLayout>